[gd_scene load_steps=9 format=2]

[ext_resource path="res://Camera.gd" type="Script" id=1]
[ext_resource path="res://Agent.gd" type="Script" id=2]
[ext_resource path="res://Scripts/LinkPath.gd" type="Script" id=3]
[ext_resource path="res://Scripts/NavLink.gd" type="Script" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]

[sub_resource type="NavigationMesh" id=1]
vertices = PoolVector3Array( -14.5, 1.5, 7.25, -14.5, 1.5, 14.5, -7.25, 1.5, 14.5, 7.25, 1.5, 14.5, 14.5, 1.5, 14.5, 14.5, 1.5, 7.25, 14.5, 1.5, -7.25, 14.5, 1.5, -14.5, 7.25, 1.5, -14.5, -7.25, 1.5, -14.5, -14.5, 1.5, -14.5, -14.5, 1.5, -7.25, -14.5, 1.5, 0, -14.5, 1.5, 7.25, -7.25, 1.5, 14.5, 0, 1.5, 14.5, 7.25, 1.5, 14.5, 14.5, 1.5, 7.25, 14.5, 1.5, 0, 14.5, 1.5, -7.25, 7.25, 1.5, -14.5, 0, 1.5, -14.5, 0, 1.5, -14.5, -7.25, 1.5, -14.5, -14.5, 1.5, -7.25, -14.5, 1.5, 0, 14.5, 1.5, 0, 0, 1.5, -14.5, -14.5, 1.5, 0, -7.25, 1.5, 14.5, 0, 1.5, 14.5, 14.5, 1.5, 7.25, 22.5, 1.5, 7.25, 22.5, 1.5, 14.5, 29.75, 1.5, 14.5, 44.25, 1.5, 14.5, 51.5, 1.5, 14.5, 51.5, 1.5, 7.25, 51.5, 1.5, -7.25, 51.5, 1.5, -14.5, 44.25, 1.5, -14.5, 29.75, 1.5, -14.5, 22.5, 1.5, -14.5, 22.5, 1.5, -7.25, 22.5, 1.5, 0, 22.5, 1.5, 7.25, 29.75, 1.5, 14.5, 37, 1.5, 14.5, 44.25, 1.5, 14.5, 51.5, 1.5, 7.25, 51.5, 1.5, 0, 51.5, 1.5, -7.25, 44.25, 1.5, -14.5, 37, 1.5, -14.5, 37, 1.5, -14.5, 29.75, 1.5, -14.5, 22.5, 1.5, -7.25, 22.5, 1.5, 0, 51.5, 1.5, 0, 37, 1.5, -14.5, 22.5, 1.5, 0, 29.75, 1.5, 14.5, 37, 1.5, 14.5, 51.5, 1.5, 7.25 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 14, 13, 12 ), PoolIntArray( 17, 16, 15 ), PoolIntArray( 19, 18, 20 ), PoolIntArray( 20, 18, 21 ), PoolIntArray( 23, 22, 24 ), PoolIntArray( 24, 22, 25 ), PoolIntArray( 31, 30, 26 ), PoolIntArray( 26, 30, 29 ), PoolIntArray( 26, 29, 28 ), PoolIntArray( 26, 28, 27 ), PoolIntArray( 34, 33, 32 ), PoolIntArray( 37, 36, 35 ), PoolIntArray( 40, 39, 38 ), PoolIntArray( 43, 42, 41 ), PoolIntArray( 46, 45, 44 ), PoolIntArray( 49, 48, 47 ), PoolIntArray( 51, 50, 52 ), PoolIntArray( 52, 50, 53 ), PoolIntArray( 55, 54, 56 ), PoolIntArray( 56, 54, 57 ), PoolIntArray( 63, 62, 58 ), PoolIntArray( 58, 62, 61 ), PoolIntArray( 58, 61, 60 ), PoolIntArray( 58, 60, 59 ) ]
agent_height = 1.0

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="CapsuleShape" id=3]

[node name="World" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.63496, 0.772545, 0, -0.772545, 0.63496, 4.374, 45.006, 42 )
current = true
script = ExtResource( 1 )

[node name="NavPlusLinkPath" type="Spatial" parent="."]
script = ExtResource( 3 )
SAVE_PATH = "res://"
make_flight_zone = false

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="." groups=["NavMeshInstance"]]
navmesh = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="NavigationMeshInstance"]
use_collision = true
width = 30.0
depth = 30.0

[node name="CSGBox2" type="CSGBox" parent="NavigationMeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 0, 0 )
use_collision = true
width = 30.0
depth = 30.0

[node name="Agent" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 3, 0 )
script = ExtResource( 2 )
nav_plus_path = NodePath("../NavPlusLinkPath")
nav_agent_path = NodePath("NavigationAgent")
to_path = NodePath("../Position3D")

[node name="MeshInstance" type="MeshInstance" parent="Agent"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Agent"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="NavigationAgent" type="NavigationAgent" parent="Agent"]
path_desired_distance = 3.0
target_desired_distance = 3.0
avoidance_enabled = true

[node name="NavPlusNavLink" type="Position3D" parent="." groups=["NavLinks"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 2, 0 )
script = ExtResource( 4 )

[node name="To" type="Position3D" parent="NavPlusNavLink"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, -13 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[connection signal="surface_hit" from="Camera" to="Agent" method="_on_Camera_surface_hit"]
[connection signal="velocity_computed" from="Agent/NavigationAgent" to="Agent" method="_on_NavigationAgent_velocity_computed"]
